fix: link spacing

--- a/src/assets/styles/components/addon-links.css
+++ b/src/assets/styles/components/addon-links.css
@@ -4,11 +4,11 @@
   grid-template-columns: repeat(1, 1fr);
 
   & div {
-    & > h2 {
+    & > h3 {
       margin-top: 0;
     }
 
-    &:last-of-type h2 {
+    &:last-of-type h3 {
       margin-top: var(--sizing-base);
     }
   }
@@ -22,7 +22,7 @@
   .addon-links {
     grid-template-columns: repeat(2, 1fr);
 
-    & div:last-of-type h2 {
+    & div:last-of-type h3 {
       margin-top: 0;
     }
   }
